Changement de l'icône pour le bouton "add to cart"

--- a/styles/style.css
+++ b/styles/style.css
@@ -148,7 +148,10 @@ body {
   color: white;
   font-size: 14px;
   font-weight: 700;
-  display: block;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   padding: 16px 0 16px 0;
   border-radius: 6px;
@@ -158,6 +161,9 @@ body {
 }
 .card__buy:hover {
   background-color: #244c3d;
+}
+.card__cart {
+  margin: 0 10px 0 0;
 }
 
 .attribution {
